# pcm

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-arango.mjs
analyzer/: pyproject.toml
analyzer/src/: __init__.py
analyzer/src/pcm_analyzer/: __init__.py  __main__.py  embedding.py  graphrag.py
analyzer/src/pcm_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: MCP_INTEGRATION.md
docs/adr/: 001-project-skeleton.md  002-microkernel-architecture.md  003-project-workspace-separation.md  004-cli-agent-first.md
engine/: Cargo.toml  package.json  pcm-engine.node
engine/src/: lib.rs
engine/src/api/: query.rs
engine/src/services/: arango.rs  mod.rs  qdrant.rs  scheduler.rs  seaweedfs.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  mockData.ts
web/src-tauri/: tauri.conf.json
web/src/components/: CodeGraphPanel.tsx  DashboardPanel.tsx  ProjectsPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  TerminalPanel.tsx
web/src/styles/: app.css
