[project]
name = "pcm-analyzer"
version = "0.1.0"
description = "PCM 分析引擎 — Tree-sitter AST、嵌入、GraphRAG"
requires-python = ">=3.11"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
pcm-analyzer = "pcm_analyzer.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
ml = ["sentence-transformers>=3.0", "numpy>=1.24"]
rag = ["networkx>=3.0", "scikit-learn>=1.3"]
