[package]
name = "pcm-engine"
version = "0.1.0"
edition = "2021"
description = "PCM 核心引擎 — 高性能圖查詢、AST 解析"

[lib]
crate-type = ["cdylib"]

[dependencies]
# napi-rs 綁定（供 Node.js 調用）
napi = { version = "2", features = ["default"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = 3
