[package]
name = "pcm-engine"
version = "0.1.0"
edition = "2021"
description = "PCM 核心引擎 — 高性能圖查詢、AST 解析"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["default", "serde-json"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = 3
