[package]
name = "pcm-engine"
version = "0.2.0"
edition = "2021"
description = "PCM 核心引擎 — 統一後端服務層、圖查詢、排程"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["default", "serde-json"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = 3
